[tool.poetry]
name = "uclip"
version = "0.1.0"
description = "CLI Utility to upload a clipboard image to a B2 bucket"
authors = ["ionite34 <dev@ionite.io>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.1"
keyring = "^23.6.0"
inquirerpy = "^0.3.4"
b2sdk = "^1.17.2"
click = "^8.1.3"
yaspin = "^2.1.0"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"

[tool.poetry.scripts]
uclip = 'uclip.main:uclip'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
