[tool.poetry]
name = "uclip"
version = "0.1.1"
description = "Command Line Utility to upload clipboard images to B2 buckets"
authors = ["ionite34 <dev@ionite.io>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/ionite34/uclip"

keywords = ["upload", "image", "b2", "clipboard"]

classifiers = [
    "Topic :: Utilities",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^9.1.1"
keyring = "^23.6.0"
inquirerpy = "^0.3.4"
b2sdk = "^1.17.2"
click = "^8.1.3"
yaspin = "^2.1.0"
pyperclip = "^1.8.2"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.scripts]
uclip = 'uclip.main:uclip'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
