[tool.poetry]
name = "uclip"
version = "0.1.4"
description = "Command Line Utility to upload clipboard images to B2 buckets"
authors = ["ionite34 <dev@ionite.io>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/ionite34/uclip"

keywords = ["upload", "image", "b2", "clipboard"]

classifiers = [
    "Topic :: Utilities",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = ">=3.7.2, <3.12"
Pillow = "^9.1.1"
keyring = "^23.9.3"
inquirerpy = "^0.3.4"
b2sdk = "^1.18.0"
click = "^8.1.3"
yaspin = "^2.2.0"
pyperclip = "^1.8.2"
rich = "^12.6.0"
typing-extensions = "^4.4.0"
"backports.cached-property" = { version = "^1.0.2", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
pytest-cov = ">=4.0.0"
black = ">=22.10.0"
isort = ">=5.10.1"

[tool.poetry.scripts]
uclip = 'uclip.main:uclip'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
